--- a/Torvalds_API/Dockerfile
+++ b/Torvalds_API/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD python -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload --reload-dir=src
+CMD python -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
