--- a/Torvalds_API/Dockerfile
+++ b/Torvalds_API/Dockerfile
@@ -1,10 +1,10 @@
 FROM bitnami/python:3.11.1
-WORKDIR /app
+WORKDIR /Torvalds_API
 
-COPY . /app
+COPY . /Torvalds_API
 
 RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD python -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
+CMD python -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload 
